--- a/index.html
+++ b/index.html
@@ -24,6 +24,12 @@
 
   gtag('config', 'G-MY3Z43JC7B');
 </script>
+
+        <script>
+    $(function(){
+      $("#includedContent").load("pano/panorama.html");
+    });
+    </script>
 </head>
 
 <body>
