--- a/floor-plan-rendering.html
+++ b/floor-plan-rendering.html
@@ -27,7 +27,7 @@
 
         <script>
     $(function(){
-      $("#includedContent").load("pano/panorama.html");
+      $("#includedContent").load("panorama.html");
     });
     </script>
 </head>
