--- a/interactive-virtual-reality.html
+++ b/interactive-virtual-reality.html
@@ -25,11 +25,6 @@
   gtag('config', 'G-MY3Z43JC7B');
 </script>
 
-        <script>
-    $(function(){
-      $("#includedContent").load("panorama.html");
-    });
-    </script>
 </head>
 
 <body>
@@ -110,7 +105,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <div id="includedContent" align="center">
+                    <div align="center">
+                        <iframe title="Virtual Tours" scrolling="no" src="https://www.3dfusionstudio.com/pano/panorama" allowfullscreen="" allowtransparency="true" frameborder="0"></iframe>
                     </div>
                 </div>
             </div>
