--- a/interactive-virtual-reality.html
+++ b/interactive-virtual-reality.html
@@ -106,7 +106,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div align="center">
-                        <iframe style="width:700px; height:394px" title="Virtual Tours" scrolling="no" src="https://www.3dfusionstudio.com/pano/panorama" allowfullscreen="" allowtransparency="true" frameborder="0"></iframe>
+                        <iframe style="width:90%; height:500px" title="Virtual Tours" scrolling="no" src="https://www.3dfusionstudio.com/pano/panorama" allowfullscreen="" allowtransparency="true" frameborder="0"></iframe>
                     </div>
                 </div>
             </div>
