--- a/portfolio.html
+++ b/portfolio.html
@@ -89,13 +89,13 @@
         </div>
 
         <div class="row">
-            <div class="text-center col-lg-10 col-md-10 offset-lg-1 offset-md-1" style="margin-bottom: 30px;">
+            <div class="text-center col-lg-8 col-md-8 offset-lg-2 offset-md-2" style="margin-bottom: 30px;">
         <div id="myBtnContainer">
             <button class="btn btn-transparent btn-transparent-black active" onclick="filterSelection('all')">All</button>
-            <button class="btn btn-transparent btn-transparent-black" onclick="filterSelection('interior')">Interior</button>
-            <button class="btn btn-transparent btn-transparent-black" onclick="filterSelection('exterior')">Exterior</button>
-            <button class="btn btn-transparent btn-transparent-black" onclick="filterSelection('floorPlan')">Floor Plan</button>
-             <button class="btn btn-transparent btn-transparent-black" onclick="filterSelection('product')">Product</button>
+            <button class="btn btn-transparent btn-transparent-black" onclick="filterSelection('interior')">Interiors</button>
+            <button class="btn btn-transparent btn-transparent-black" onclick="filterSelection('exterior')">Exteriors</button>
+            <button class="btn btn-transparent btn-transparent-black" onclick="filterSelection('floorPlan')">Floor Plans</button>
+             <button class="btn btn-transparent btn-transparent-black" onclick="filterSelection('product')">Products</button>
         </div>
                 </div>
         </div>
