--- a/exterior-rendering.html
+++ b/exterior-rendering.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Exterior Rendering</title>
+    <title>Architectural Exterior 3D Rendering Service At Best Prices</title>
     <meta name="description" content="" >
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -160,7 +160,7 @@
                 <h2><span>Our Work</span></h2>
             </div>
             <div class="row">
-
+                        
                                 <div class="col-lg-4 text-center gutters">
                     <a data-fslightbox="gallery" href="img/exterior/townhome-exterior-3d-rendering.jpg">
                         <img src="img/exterior/townhome-exterior-3d-rendering-thumb700.jpg"  style="height: auto; max-width: 100%;" alt="Townhome exterior 3d rendering" loading="lazy">
@@ -214,12 +214,6 @@
                         <img src="img/exterior/exterior-afternoon-thumb700.jpg"  style="height: auto; max-width: 100%;" alt="House exterior afternoon rendering" loading="lazy">
                     </a>
                 </div>
-
-
-
-
-
-
 
 
             </div>
@@ -334,6 +328,7 @@
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
     <script src="js/fslightbox.js"></script>
+    <script src="js/filter.js"></script>
 
 
 </body>
