--- a/interior-rendering.html
+++ b/interior-rendering.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Interior Rendering</title>
-    <meta name="description" content="Best interior rendering services. High quality photo-realistic images that saves you valuable time and money." >
+    <title>Interior 3D Rendering Service At Best Prices | 3dFusionStudio</title>
+    <meta name="description" content="Best interior rendering services. High quality photo-realistic images that saves your valuable time and money." >
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -391,6 +391,7 @@
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
     <script src="js/fslightbox.js"></script>
+    <script src="js/filter.js"></script>
 
 
 </body>
