--- a/interior-rendering.html
+++ b/interior-rendering.html
@@ -119,6 +119,7 @@
 
                     <h2><span>Why Choose 3dFusionStudio</span></h2>
 
+                    <p>Our 3d Interior Rendering service is tailored for producing custom 3D renderings for Interior Designers and Home Renovators at very affordable prices and short turnaround times.</p>
                     <ul>
                         <li>
                             <div style="padding-bottom:20px; font-weight: 600;">World-Class Expertise</div>
