--- a/404.html
+++ b/404.html
@@ -70,7 +70,20 @@
     </header>
 
 
-<h1>Page Not Found</h1><p>The requested page was not found on this server.</p>
+
+     <section class="bgimage" style="background:url('css/img/not_found.jpg') no-repeat; background-position: center; background-size: cover;">
+        <div class="container h-100">
+            <div class="row h-100 align-items-center justify-content-center text-center">
+                <div class="col-lg-8">
+                    <h1>Page Not Found</h1>
+                    <p>The requested page was not found on this server.</p>
+                    <h5>3dFusionStudio | A 3D Visualization Company</h5>
+                    <a href="#portfolio" class="btn btn-transparent">OUR WORK</a>
+                    <a href="#contact-form" class="btn btn-white">GET IN TOUCH</a>
+                </div>
+            </div>
+        </div>
+    </section>
 
 
     <footer>
