--- a/404.html
+++ b/404.html
@@ -77,7 +77,7 @@
                 <div class="col-lg-8">
                     <h1>Page Not Found</h1>
                     <h5>The requested page was not found on this server.</h5>
-                    <a href="/" class="btn btn-transparent">RETURN TO HOMEPAGE</a>
+                    <a href="/" class="btn btn-transparent">HOMEPAGE</a>
                 </div>
             </div>
         </div>
