--- a/about.html
+++ b/about.html
@@ -73,6 +73,35 @@
 
 
 
+     <section class="halfhead" style="background:url('css/img/contact-cover.jpg') no-repeat; background-position: center; background-size: cover;">
+        <div class="container h-100">
+            <div class="row h-100 align-items-center justify-content-center text-center">
+                <div class="col-lg-10">
+                    <h1>ABOUT 3DFUSIONSTUDIO</h1>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section>
+        <div class="container">
+            <div class="row">
+                <div class="text-center col-md-12">
+
+
+                    <h2><span>Pioneering 3D Rendering Industry Since 2017</span></h2>
+
+
+                    <div class="text-center">
+                        <p>3dFusionStudio is a leading architectural 3D Rendering company striving to help you create realistic,futuristic designs for your dream projects. With over ten years of expertise and a team of experienced designers and architects, our team aspires to bring your ideas to life with top-notch 3D Renderings.</p>
+                        <p>Located in New Delhi, India, 3dFusionStudio operates globally, working with projects of all extents and complexities. We utilize state-of-the-art technology and custom-developed tools that bring perfection to the architectural drawings. We offer a wide range of services from Interior and Exterior Rendering, Floorplan Rendering to Product Rendering, and 3D Furniture Rendering with the option of Interactive Virtual Reality so that your projects have access to our professional services no matter where you are.</p>
+                        <p>Visualize your projects and accelerate the construction process with exceptionally realistic 3D renderings from 3dFusionStudio.</p>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </section>
 
 
     <footer>
