--- a/product-rendering.html
+++ b/product-rendering.html
@@ -241,9 +241,9 @@
                             <textarea name="message" cols="40" row="10"
                                 placeholder="Leave us a message..."></textarea>
                         </div>
-                        <div data-netlify-recaptcha="true"></div>
+                        <div class="form-elemnt" data-netlify-recaptcha="true"></div>
                         <div class="form-elemnt">
-                            <button type="submit">SUBMIT</button>
+                            <button type="submit" id="register" value="Register" disabled="disabled">SUBMIT</button>
                         </div>
 
                     </form>
@@ -328,6 +328,7 @@
         crossorigin="anonymous"></script>
     <script src="js/fslightbox.js"></script>
     <script src="js/filter.js"></script>
+    <script src="js/script.js"></script>
 
 
 </body>
