--- a/thank-you.html
+++ b/thank-you.html
@@ -164,6 +164,7 @@
         crossorigin="anonymous"></script>
     <script src="js/fslightbox.js"></script>
     <script src="js/filter.js"></script>
+    <script src="js/script.js"></script>
 
 
 </body>
