--- a/3d-furniture-rendering.html
+++ b/3d-furniture-rendering.html
@@ -150,6 +150,7 @@
         crossorigin="anonymous"></script>
     <script src="js/fslightbox.js"></script>
     <script src="js/filter.js"></script>
+    <script src="js/script.js"></script>
 
 
 </body>
