--- a/floor-plan-rendering.html
+++ b/floor-plan-rendering.html
@@ -266,7 +266,7 @@
                         </div>
                         <div class="form-elemnt" data-netlify-recaptcha="true" required></div>
                         <div class="form-elemnt">
-                            <button type="submit">SUBMIT</button>
+                            <button type="submit" class="btn btn-primary">SUBMIT</button>
                         </div>
 
                     </form>
