--- a/exterior-rendering.html
+++ b/exterior-rendering.html
@@ -232,17 +232,17 @@
                     <h2><span>Contact Us</span></h2>
                     <form name="contact" method="POST" data-netlify="true" data-netlify-recaptcha="true" action="/thank-you"
                         >
-                        <div class="form-elemnt" required>
+                        <div class="form-elemnt form-control" required>
                             <input type="text" name="name" placeholder="Name">
                         </div>
 
 
-                        <div class="form-elemnt" required>
+                        <div class="form-elemnt form-control" required>
                             <input type="email" name="email" placeholder="Email">
                         </div>
 
 
-                        <div class="form-elemnt" required>
+                        <div class="form-elemnt form-control" required>
                             <textarea name="message" cols="40" row="10"
                                 placeholder="Leave us a message..."></textarea>
                         </div>
