--- a/product-rendering.html
+++ b/product-rendering.html
@@ -227,17 +227,17 @@
                     <h2><span>Contact Us</span></h2>
                     <form name="contact" method="POST" data-netlify="true" data-netlify-recaptcha="true" action="/thank-you"
                         >
-                        <div class="form-elemnt form-control" required>
+                        <div class="form-elemnt" required>
                             <input type="text" name="name" placeholder="Name">
                         </div>
 
 
-                        <div class="form-elemnt form-control" required>
+                        <div class="form-elemnt" required>
                             <input type="email" name="email" placeholder="Email">
                         </div>
 
 
-                        <div class="form-elemnt form-control" required>
+                        <div class="form-elemnt" required>
                             <textarea name="message" cols="40" row="10"
                                 placeholder="Leave us a message..."></textarea>
                         </div>
@@ -250,6 +250,62 @@
                 </div>
             </div>
         </div>
+
+
+        <form class="row g-4">
+  <div class="col-md-4">
+    <div class="form-outline">
+      <input type="text" class="form-control is-valid" id="validationServer01" value="Mark" required />
+      <label for="validationServer01" class="form-label">First name</label>
+      <div class="valid-feedback">Looks good!</div>
+    </div>
+  </div>
+  <div class="col-md-4">
+    <div class="form-outline">
+      <input type="text" class="form-control is-valid" id="validationServer02" value="Otto" required />
+      <label for="validationServer02" class="form-label">Last name</label>
+      <div class="valid-feedback">Looks good!</div>
+    </div>
+  </div>
+  <div class="col-md-4">
+    <div class="input-group form-outline">
+      <span class="input-group-text" id="inputGroupPrepend3">@</span>
+      <input
+        type="text"
+        class="form-control is-invalid"
+        id="validationServerUsername"
+        aria-describedby="inputGroupPrepend3"
+        required
+      />
+      <label for="validationServerUsername" class="form-label">Username</label>
+      <div class="invalid-feedback">Please choose a username.</div>
+    </div>
+  </div>
+  <div class="col-md-6">
+    <div class="form-outline">
+      <input type="text" class="form-control is-invalid" id="validationServer03" required />
+      <label for="validationServer03" class="form-label">City</label>
+      <div class="invalid-feedback">Please provide a valid city.</div>
+    </div>
+  </div>
+  <div class="col-md-6">
+    <div class="form-outline">
+      <input type="text" class="form-control is-invalid" id="validationServer05" required />
+      <label for="validationServer05" class="form-label">Zip</label>
+      <div class="invalid-feedback">Please provide a valid zip.</div>
+    </div>
+  </div>
+  <div class="col-12">
+    <div class="form-check">
+      <input class="form-check-input is-invalid" type="checkbox" value="" id="invalidCheck3" required />
+      <label class="form-check-label" for="invalidCheck3">Agree to terms and conditions</label>
+      <div class="invalid-feedback">You must agree before submitting.</div>
+    </div>
+  </div>
+  <div class="col-12">
+    <button class="btn btn-primary" type="submit">Submit form</button>
+  </div>
+</form>
     </section>
 
 
