--- a/exterior-rendering.html
+++ b/exterior-rendering.html
@@ -230,7 +230,7 @@
             <div class="row">
                 <div class="text-center col-lg-8 col-md-8 offset-lg-2 offset-md-2">
                     <h2><span>Contact Us</span></h2>
-                    <form name="contact" method="POST" data-netlify="true" data-netlify-recaptcha="true" action="/thank-you"
+                    <form id="captcha_form" name="contact" method="POST" data-netlify="true" data-netlify-recaptcha="true" action="/thank-you"
                         >
                         <div class="form-elemnt">
                             <input class="form-control" type="text" name="name" placeholder="Name" required>
@@ -250,7 +250,7 @@
                         <div class="form-elemnt" data-netlify-recaptcha="true"></div>
 
                         <div class="form-elemnt">
-                            <button type="submit" id="btnSubmit" class="btn btn-primary hidden">SUBMIT</button>
+                            <button type="submit" class="btn btn-primary">SUBMIT</button>
                         </div>
 
                     </form>
@@ -327,16 +327,6 @@
         </div>
 
     </footer>
-<script>
-    function recaptchaCallback() {
-        var btnSubmit = document.getElementById("btnSubmit");
-
-        if ( btnSubmit.classList.contains("hidden") ) {
-            btnSubmit.classList.remove("hidden");
-            btnSubmitclassList.add("show");
-        }
-    }
-</script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"
         integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
