--- a/exterior-rendering.html
+++ b/exterior-rendering.html
@@ -247,7 +247,7 @@
                                 placeholder="Leave us a message..." required></textarea>
                         </div>
 
-                        <div class="form-elemnt" data-netlify-recaptcha="true"></div>
+                        <div id="recaptcha" class="form-elemnt" data-netlify-recaptcha="true"></div>
 
                         <div class="form-elemnt">
                             <button type="submit" class="btn btn-primary">SUBMIT</button>
