--- a/interior-rendering.html
+++ b/interior-rendering.html
@@ -313,7 +313,9 @@
                         </div>
 
                         <div id="recaptcha" class="form-elemnt" data-netlify-recaptcha="true"></div>
-
+                        <div class="invalid-feedback">
+                              please verify you are human.
+                            </div>
                         <div class="form-elemnt">
                             <button type="submit" class="btn btn-primary">SUBMIT</button>
                         </div>
