--- a/product-rendering.html
+++ b/product-rendering.html
@@ -241,9 +241,9 @@
                             <textarea name="message" cols="40" row="10"
                                 placeholder="Leave us a message..." required></textarea>
                         </div>
-
-                        <div id="recaptcha" class="form-elemnt" data-netlify-recaptcha="true"></div>
-
+                        <div class="form-elemnt">
+                        <div id="recaptcha" data-netlify-recaptcha="true"></div>
+                        </div>
                         <div class="form-elemnt">
                             <button type="submit" class="btn btn-primary">SUBMIT</button>
                         </div>
