--- a/floor-plan-rendering.html
+++ b/floor-plan-rendering.html
@@ -265,7 +265,8 @@
                                 placeholder="Leave us a message..." required></textarea>
                         </div>
                         <div class="form-elemnt">
-                        <div id="recaptcha" data-netlify-recaptcha="true"></div>
+                            <p id="recaptcha" style="display:none;">Please confirm you are human.</p>
+                        <div  data-netlify-recaptcha="true"></div>
                         </div>
                         <div class="form-elemnt">
                             <button type="submit" class="btn btn-primary">SUBMIT</button>
