--- a/interactive-virtual-reality.html
+++ b/interactive-virtual-reality.html
@@ -200,8 +200,8 @@
                             <textarea name="message" cols="40" row="10"
                                 placeholder="Leave us a message..." required></textarea>
                         </div>
-                        <div class="form-elemnt">
-                            <p id="recaptcha" style="display:none;">Please confirm you are human.</p>
+                        <div class="text-xs-center">
+                            <p id="recaptcha" style="display:none;color:red;">Please confirm you are human.</p>
                         <div  data-netlify-recaptcha="true"></div>
                         </div>
                         <div class="form-elemnt">
