--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
                             <textarea name="message" cols="40" row="10"
                                 placeholder="Leave us a message..." required></textarea>
                         </div>
-                        <div class="text-xs-center">
+                        <div class="form-elemnt text-xs-center">
                             <p id="recaptcha" style="display:none;color:red;">Please confirm you are human.</p>
                         <div  data-netlify-recaptcha="true"></div>
                         </div>
