--- a/contact.html
+++ b/contact.html
@@ -126,7 +126,7 @@
                         <div  data-netlify-recaptcha="true"></div>
                         </div>
                         <div class="form-elemnt">
-                            <button type="submit" class="btn btn-primary">SUBMIT</button>
+                            <button type="submit">SUBMIT</button>
                         </div>
 
                     </form>
