--- a/floor-plan-rendering.html
+++ b/floor-plan-rendering.html
@@ -269,7 +269,7 @@
                         <div  data-netlify-recaptcha="true"></div>
                         </div>
                         <div class="form-elemnt">
-                            <button type="submit" class="btn btn-primary">SUBMIT</button>
+                            <button type="submit">SUBMIT</button>
                         </div>
 
                     </form>
