--- a/exterior-rendering.html
+++ b/exterior-rendering.html
@@ -41,8 +41,6 @@
                 </button>
                 <div class="navbar-collapse collapse w-100" id="collapseNavbar">
                     <ul class="nav navbar-nav ms-auto w-100 justify-content-end">
-
-
                         <li class="nav-item dropdown">
                             <a class="nav-link" href="#" id="navbarScrollingDropdown" role="button"
                                 data-bs-toggle="dropdown" aria-expanded="false">Services</a>
@@ -83,7 +81,6 @@
             </div>
         </div>
     </section>
-
 
     <section>
         <div class="container">
@@ -322,7 +319,7 @@
             </div>
 
             <div class="row mb">
-                <div class="text-center col-12">© 2021 3DFUSIONSTUDIO</div>
+                <div class="text-center col-12">© <span id="year"></span> 3DFUSIONSTUDIO</div>
 
             </div>
         </div>
