--- a/thank-you.html
+++ b/thank-you.html
@@ -150,7 +150,7 @@
             </div>
 
             <div class="row mb">
-                <div class="text-center col-12">© 2021 3DFUSIONSTUDIO</div>
+                <div class="text-center col-12">© <span id="year"></span> 3DFUSIONSTUDIO</div>
 
             </div>
         </div>
