--- a/interior-rendering.html
+++ b/interior-rendering.html
@@ -71,8 +71,7 @@
         </nav>
 
     </header>
-
-
+    
      <section class="halfhead" style="background:url('css/img/interior-rendering-cover.jpg') no-repeat; background-position: center; background-size: cover;">
         <div class="container h-100">
             <div class="row h-100 align-items-center justify-content-center text-center">
@@ -386,7 +385,7 @@
             </div>
 
             <div class="row mb">
-                <div class="text-center col-12">© 2021 3DFUSIONSTUDIO</div>
+                <div class="text-center col-12">© <span id="year"></span> 3DFUSIONSTUDIO</div>
 
             </div>
         </div>
