--- a/portfolio.html
+++ b/portfolio.html
@@ -607,6 +607,38 @@
     </div>
 </section>
 
+<div class="w-100"><hr></div>
+
+<section id='contact-form'>
+    <div class="container">
+        <div class="row">
+            <div class="text-center col-lg-8 col-md-8 offset-lg-2 offset-md-2">
+                <h2><span>Contact Us</span></h2>
+                <form id="contact_form" name="contact" method="POST" action="/thank-you"
+                    >
+                    <div class="form-elemnt">
+                        <input type="text" name="name" placeholder="Name" required>
+                    </div>
+
+
+                    <div class="form-elemnt">
+                        <input type="email" name="email" placeholder="Email" required>
+                    </div>
+
+
+                    <div class="form-elemnt">
+                        <textarea name="message" cols="40" row="10"
+                            placeholder="Leave us a message..." required></textarea>
+                    </div>
+                    <div class="form-elemnt">
+                        <button type="submit">SUBMIT</button>
+                    </div>
+
+                </form>
+            </div>
+        </div>
+    </div>
+</section>
 
 
     <footer>
