--- a/floor-plan-rendering.html
+++ b/floor-plan-rendering.html
@@ -243,40 +243,36 @@
 
 <div class="w-100"><hr></div>
 
-    <section id='contact-form'>
-        <div class="container">
-            <div class="row">
-                <div class="text-center col-lg-8 col-md-8 offset-lg-2 offset-md-2">
-                    <h2><span>Contact Us</span></h2>
-                    <form id="captcha_form" name="contact" method="POST" data-netlify="true" data-netlify-recaptcha="true" action="/thank-you"
-                        >
-                        <div class="form-elemnt">
-                            <input type="text" name="name" placeholder="Name" required>
-                        </div>
+<section id='contact-form'>
+    <div class="container">
+        <div class="row">
+            <div class="text-center col-lg-8 col-md-8 offset-lg-2 offset-md-2">
+                <h2><span>Contact Us</span></h2>
+                <form id="contact_form" name="contact" method="POST" action="/thank-you"
+                    >
+                    <div class="form-elemnt">
+                        <input type="text" name="name" placeholder="Name" required>
+                    </div>
 
 
-                        <div class="form-elemnt">
-                            <input type="email" name="email" placeholder="Email" required>
-                        </div>
+                    <div class="form-elemnt">
+                        <input type="email" name="email" placeholder="Email" required>
+                    </div>
 
 
-                        <div class="form-elemnt">
-                            <textarea name="message" cols="40" row="10"
-                                placeholder="Leave us a message..." required></textarea>
-                        </div>
-                        <div class="form-elemnt text-xs-center">
-                            <p id="recaptcha" style="display:none;color:red;">Please confirm you are human.</p>
-                        <div  data-netlify-recaptcha="true"></div>
-                        </div>
-                        <div class="form-elemnt">
-                            <button type="submit">SUBMIT</button>
-                        </div>
+                    <div class="form-elemnt">
+                        <textarea name="message" cols="40" row="10"
+                            placeholder="Leave us a message..." required></textarea>
+                    </div>
+                    <div class="form-elemnt">
+                        <button type="submit">SUBMIT</button>
+                    </div>
 
-                    </form>
-                </div>
+                </form>
             </div>
         </div>
-    </section>
+    </div>
+</section>
 
 
     <footer>
