--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
             <div class="row">
                 <div class="text-center col-lg-8 col-md-8 offset-lg-2 offset-md-2">
                     <h2><span>Contact Us</span></h2>
-                    <form id="captcha_form" name="contact" method="POST" data-netlify="true" action="/thank-you"
+                    <form id="contact_form" name="contact" method="POST" action="/thank-you"
                         >
                         <div class="form-elemnt">
                             <input type="text" name="name" placeholder="Name" required>
