--- a/exterior-rendering.html
+++ b/exterior-rendering.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Architectural Exterior 3D Rendering Service At Best Prices</title>
+    <link rel="canonical" href="https://3dfusionstudio.com/exterior-rendering" />
     <meta name="description" content="">
     <link rel="icon" href="/css/img/favicon.png">
 
