--- a/interior-rendering.html
+++ b/interior-rendering.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Interior 3D Rendering Service At Best Prices | 3dFusionStudio</title>
+    <link rel="canonical" href="https://3dfusionstudio.com/interior-rendering" />
     <meta name="description" content="Best interior rendering service. High quality, photo-realistic interior images, fast turnaround and lowest prices. Get a quote today for free.">
     <link rel="icon" href="/css/img/favicon.png">
 
