--- a/about.html
+++ b/about.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About 3dFusionStudio</title>
+    <link rel="canonical" href="https://3dfusionstudio.com/about" />
     <meta name="description" content="">
     <link rel="icon" href="/css/img/favicon.png">
 
