--- a/floor-plan-rendering.html
+++ b/floor-plan-rendering.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>3D Floor Plan Rendering Service At Best Prices | 3dFusionStudio</title>
+    <link rel="canonical" href="https://3dfusionstudio.com/floor-plan-rendering" />
     <meta name="description" content="">
     <link rel="icon" href="/css/img/favicon.png">
 
