--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="canonical" href="https://3dfusionstudio.com/" />
     <title>3dFusionStudio: Architectural 3d Rendering Services</title>
     <meta name="description" content="3dFusionStudio is a leading 3D rendering and animation services company. We have provide great value and service to customers from around the world.">
     <link rel="icon" href="/css/img/favicon.png">
